infra/istio/dev-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argo-roll-test-virtualservice-dev
  namespace: dev
spec:
  gateways:
  - istio-system/argo-rollouts-gateway
  hosts:
  - bluegreen-dev.local
  http:
  - name: primary
    match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: argo-roll-test
        port:
          number: 80
      weight: 100

  - name: preview
    match:
    - headers:
        x-preview:
          exact: "true"
    route:
    - destination:
        host: argo-roll-test-preview
        port:
          number: 80
