infra/istio/prod-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argo-roll-test-virtualservice
  namespace: prod
spec:
  hosts:
    - "canary.prod.local"
  gateways:
    - istio-system/argo-rollouts-gateway
  http:
    - name: primary
      route:
        - destination:
            host: argo-roll-test
            port:
              number: 80
          weight: 100
        - destination:
            host: argo-roll-test-preview
            port:
              number: 80
          weight: 0
