infra/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argo-roll-test-virtualservice
  namespace: prod
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/ingressgateway
  http:
    - name: primary
      route:
        - destination:
            host: argo-roll-test
          weight: 100
        - destination:
            host: argo-roll-test-preview
          weight: 0
